# esplay-retro-emulation

./: .gitignore  README.MD  gen_script.py  mkrelease.bat  mkrelease.sh  mkrelease_mod.sh
assets/: Tile.xcf  tile.raw
esplay-components/esplay-hal/: CMakeLists.txt  Kconfig.projbuild
esplay-components/esplay-hal/include/: display.h  gamepad.h  settings.h
esplay-components/esplay-hal/src/: audio.c  display.c  gamepad.c  power.c  sdcard.c  settings.c
esplay-components/esplay-ui/: CMakeLists.txt
esplay-components/esplay-ui/include/: esplay-ui.h
esplay-components/esplay-ui/src/: esplay-ui.c
esplay-components/osd-menu/: CMakeLists.txt
esplay-components/osd-menu/src/: menu.c
esplay-components/ugui/: CMakeLists.txt  component.mk
esplay-components/ugui/UGUI/: ugui.c  ugui.h
esplay-gnuboy/: Makefile
esplay-launcher/: CMakeLists.txt  Makefile  README.md  sdkconfig
esplay-launcher/components/acodecs/: CMakeLists.txt
esplay-launcher/components/acodecs/include/: dr_flac.h  dr_mp3.h  dr_wav.h
esplay-launcher/components/acodecs/src/: acodecs.c
esplay-launcher/components/acodecs/src/libxmplite/: CMakeLists.txt  configure  watcom.mif
esplay-launcher/components/file_server/: CMakeLists.txt
esplay-launcher/components/file_server/src/: file_server.c
esplay-launcher/main/: CMakeLists.txt  app_audio_player.c  app_file_browser.c  app_image_viewer.c.bak  audio_player.c  component.mk  file_ops.c  gfxTile.inc  gfxTile.raw  main.c
esplay-launcher/main/include/: app_audio_player.h  app_file_browser.h  app_image_viewer.h  file_ops.h
esplay-nofrendo/: Makefile
esplay-smsplusgx/: Makefile
retro-esp32/: Makefile
